# Course-Registration-System

./: CMakeLists.txt  README.md  Structure_definitions.c  add_module.c  add_module.h  all_includes_and_macros.h  file_functions.c  file_functions.h  login signup.c  login signup.h  mail.c  mail.h  main.c  modifying_functions.c  modifying_functions.h  remove_module.c  remove_module.h  slot.c  slot.h  view_module.c  view_module.h
